# t5-trt-cpp

./: .gitignore  111.txt  CMakeLists.txt  convert_2encoder_log.txt  convert_bert_log.txt  convert_encoder_log.txt  main.cpp  onnx2tensorrt.sh  readme.md
BERT/: CMakeLists.txt
HuggingFace/: .~trt_t5_bs4_greedy.ipynb  build_t5_trt copy.py  build_t5_trt.py  gen_t5_bs1_beam2.sh  pytorch_demo_t5.py
HuggingFace/BART/: export.py
HuggingFace/GPT2/: export.py
HuggingFace/NNDF/: models.py
HuggingFace/T5/: export.py
src/: cmdline.h  encoderdecoder_infer.cpp  encoderdecoder_infer.h  logging.h  perf.cpp  sentencepiece_tokenizer.2  sentencepiece_tokenizer.2pp  sentencepiece_tokenizer.h  t5_logger.2pp  t5_logger.xpp  utils.hpp
